Fix some layout issues
FTN-N7XA3M - Get in touch mobile – adjust spacing
FTN-GFBZ5C - Spacing + aligned texts and pictures
FTN-SPK2HH - Navigation black box
FTN-XHN5UQ - Header Stage mobile – adjust spacing

--- a/assets/sass/_components.scss
+++ b/assets/sass/_components.scss
@@ -33,6 +33,13 @@
     overflow: visible;
   }
 }
+header {
+  .fdc-content-layout:last-child {
+    > section {
+      @apply pb-0;
+    }
+  }
+}
 
 // pagination
 .echo_pagination {
